# zsieve

./: 1e-5-zeta.txt  1e-6-zeta.txt  Cargo.toml  README.md  prime_gen.py
src/: main.rs
zeta_batches/: zeta_batch_1.txt  zeta_batch_10.txt  zeta_batch_100.txt  zeta_batch_1000.txt  zeta_batch_101.txt  zeta_batch_102.txt  zeta_batch_103.txt  zeta_batch_104.txt  zeta_batch_105.txt  zeta_batch_106.txt  zeta_batch_107.txt  zeta_batch_108.txt  zeta_batch_109.txt  zeta_batch_11.txt  zeta_batch_110.txt  zeta_batch_111.txt  zeta_batch_112.txt  zeta_batch_113.txt  zeta_batch_114.txt  zeta_batch_115.txt  zeta_batch_116.txt  zeta_batch_117.txt  zeta_batch_118.txt  zeta_batch_119.txt  zeta_batch_12.txt  zeta_batch_120.txt  zeta_batch_121.txt  zeta_batch_122.txt  zeta_batch_123.txt  zeta_batch_124.txt  zeta_batch_125.txt  zeta_batch_126.txt  zeta_batch_127.txt  zeta_batch_128.txt  zeta_batch_129.txt  zeta_batch_13.txt  zeta_batch_130.txt  zeta_batch_131.txt  zeta_batch_132.txt  zeta_batch_133.txt  (+960 more)
